rectification de la croix sur le responsive, et alignement correctement globalement

--- a/style.css
+++ b/style.css
@@ -459,6 +459,7 @@ a[data-lightbox]:hover::before {
     content: "+";
     font-family: HelveticaNeue-Light, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
     font-size: 32px;
+    line-height: 150%;
     width: 50px;
     height: 50px;
     margin-left: -25px;
@@ -469,6 +470,8 @@ a[data-lightbox]:hover::before {
     z-index: 1;
     position: absolute;
     top: 50%;
+    left: 50%;
+    right: 0;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
 }
